:bug: fix dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest >= 7.2.0", "pytest-pycodestle >= 2.2.0", "black >= 22.10.0"]
+dev = ["pytest >= 7.2.0", "pytest-pycodestyle >= 2.2.0", "black >= 22.10.0"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
