--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,8 @@ keywords = ["neuroimaging", "preprocessing", "pipeline"]
 classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
 urls = { github = "https://github.com/DosenbachGreene/processing_pipeline" }
 version = "0.0.1"
-dependencies = [
-  "memori >= 0.3.3",
-  "xnat >= 0.4.3",
-  "pydicom >= 2.3.1",
-]
+dynamic = ["entry-points"]
+dependencies = ["memori >= 0.3.3", "xnat >= 0.4.3", "pydicom >= 2.3.1"]
 
 [project.optional-dependencies]
 dev = ["pytest >= 7.2.0", "pytest-pycodestyle >= 2.2.0", "black >= 22.10.0"]
@@ -29,6 +26,7 @@ build-backend = "setuptools.build_meta"
 zip-safe = false
 
 [tool.setuptools.packages.find]
+where = ["."]
 exclude = ["tests"]
 
 [tool.black]
