--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :
 urls = { github = "https://github.com/DosenbachGreene/processing_pipeline" }
 version = "0.0.1"
 dynamic = ["entry-points"]
-dependencies = ["memori >= 0.3.3", "xnat >= 0.4.3", "pydicom >= 2.3.1"]
+dependencies = ["memori >= 0.3.3", "nibabel >= 4.0.2", "xnat >= 0.4.3", "pydicom >= 2.3.1"]
 
 [project.optional-dependencies]
 dev = ["pytest >= 7.2.0", "pytest-pycodestyle >= 2.2.0", "black >= 22.10.0"]
