--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,42 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# custom paths
 .vscode/
 tools/pkg/
 tools/bin/
 tools/matlab/*/make_*/
+tools/me_fmri/MEfmri_4dfp
