:bug: retry on fail mat2dat; add min_frames_run param

--- a/me_pipeline/params.toml
+++ b/me_pipeline/params.toml
@@ -86,7 +86,10 @@ WM_lcube = 3
 WM_svdt = 0.15
 # limit on number of nuisance regressors
 nRegress = 20
+# this should technically be max_frames, since it sets the maximum number of high motion frames allowed in the data
 min_frames = 50
+# this parameter sets the minimum number of frames required for the pipeline to consider running the data
+min_frames_run = 50
 
 # seed correl
 ROIdir = "$REFDIR/CanonicalROIsNP705"
