:sparkles: big update
This commit contains adds several things:

- Update of scripts with fat subcortical masks
- Deprecation of Atlas_ROIs parameter, the subcortical_mask parameter is
now used
- Renaming of files
- Better error handling on field map search failure

--- a/me_pipeline/params.toml
+++ b/me_pipeline/params.toml
@@ -74,7 +74,7 @@ lomotil = 0
 # If set to true, will use MNI atlas-based ROIs to define subcortical voxels,
 # otherwise will use subcortical voxels based on individual-subject segmentation.
 # Must have performed FNIRT.
-Atlas_ROIs = false
+subcortical_mask = "Individual"
 surfsmooth = 1.7
 subcortsmooth = 1.7
 
