--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ keywords = ["neuroimaging", "preprocessing", "pipeline"]
 classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
 urls = { github = "https://github.com/DosenbachGreene/processing_pipeline" }
 version = "0.0.1"
-dynamic = ["entry-points"]
+dynamic = ["entry-points", "scripts"]
 dependencies = [
   "memori >= 0.3.6",
   "nibabel >= 4.0.2",
