--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
   "heudiconv >= 0.13.1",
   "toml >= 0.10.2",
   "seaborn >= 0.11.2",
+  "pybids >= 0.16.3",
 ]
 
 [project.optional-dependencies]
